--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,26 @@
-title:            Site Title
+title:            Russell Tan
 description:      Describe your website here.
 disqus_shortname: hpstrtheme
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url: 		  //sellnat77.github.io
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Russell Tan
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
-  # Social networking links used in footer. Update and remove as you like.
-  twitter:        
+  email:          sell_nat@yahoo.com
+  # Social networking links used in footer. Update and remove as you like.       
   facebook:       
-  github:         
-  stackexchange:  
+  github: 	  //github.com/sellnat77         
   linkedin:       
-  instagram:      
-  flickr:         
-  tumblr:         
-  # google plus id, include the '+', eg +mmistakes
-  google_plus:    +yourid
 
 # Background image to be tiled on all pages
-background: 
+background: 	//bgfons.com/upload/wood_texture3850.jpg
 
-# Analytics and webmaster tools stuff goes here
-google_analytics:   
-google_verify:      
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
@@ -44,9 +32,6 @@ gems:
 sass:
   sass_dir: _sass
   style: compressed
-
-# https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
 
 # Amount of post to show on home page
 paginate: 5
